traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:11: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
              return true
                     ^Snake:11: warning: enclosing method positionFinale has result type Unit: return value discarded
              return true
              ^Snake:14: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
            return false
                   ^Snake:14: warning: enclosing method positionFinale has result type Unit: return value discarded
            return false
            ^Snake:21: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
              return true
                     ^Snake:21: warning: enclosing method positionFinale has result type Unit: return value discarded
              return true
              ^Snake:24: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
            return false
                   ^Snake:24: warning: enclosing method positionFinale has result type Unit: return value discarded
            return false
            ^Snake:30: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^Snake:30: warning: enclosing method positionFinale has result type Unit: return value discarded
    return false
    ^Snake:36: error: value unary_! is not a member of Unit
  while(!positionFinale())
        ^